# spicelib-mcp

./: .gitignore  .mcp.json.template  README.md  kicad_compat.py  pyproject.toml  server.py  server_stdio.py
examples/: test_kicad_title.py  test_netlist.cir
