[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spicelib-mcp"
version = "0.1.4"
description = "MCP server for running ngspice simulations via spicelib"
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    {name = "Lucas Gerads", email = ""},
]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "spicelib",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/lucasgerads/spicelib-mcp"
Repository = "https://github.com/lucasgerads/spicelib-mcp"

[project.scripts]
spicelib-mcp = "server_stdio:main"

[tool.hatch.build.targets.wheel]
include = [
    "server.py",
    "server_stdio.py",
    "kicad_compat.py",
]
